# cmput414

./: README.md
test/: .gitignore  CMakeLists.txt  Makefile  README  build.sh  cmput414_bin  collapse_edge.cpp  collapse_edge.h  cubetri.off  graph_make.py  imageMerge.py  main.cpp  run.sh
test/images/: imageMerge.py
test/images/fertility.off_4_4l_6_6l_8_8l/4l/: surface_distances
test/images/fertility.off_4_4l_6_6l_8_8l/6/: surface_distances
test/images/fertility.off_4_4l_6_6l_8_8l/8/: surface_distances
test/images/fertility.off_4_4l_6_6l_8_8l/8l/: surface_distances
